Added heroku settings to pom.xml